--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -8,6 +8,8 @@ body {
   background: #ffffff;
   color: #222;
   line-height: 1.6;
+  max-width: 100%;  /* control width */
+  margin: 0 auto;
 }
 
 /* Banner */
@@ -64,7 +66,8 @@ max-width: 100%;  /* control width to full size of screen */
   border: none;
   cursor: pointer;
   transition: all 0.3s ease;
-  align-items: center;
+  max-width: 100%;  /* control width */
+  margin: 0 auto;
 }
 
 .button.html:hover {
@@ -80,7 +83,8 @@ max-width: 100%;  /* control width to full size of screen */
   opacity: 0;
   transform: translateY(20px);
   transition: all 0.8s ease;
-  align-items: center;
+  max-width: 100%;  /* control width */
+  margin: 0 auto;
 }
 
 /* Footer */
