--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -108,7 +108,7 @@ body {
 /* Divider */
 .divider {
   height: 2px;
-  background: linear-gradient(to right, transparent, #00897b, transparent);
+  background: linear-gradient(to right, transparent, #00897b, #00897b, #00897b, #00897b, #00897b, #00897b,  transparent);
   margin: 40px auto;
   width: 80%;
   border-radius: 1px;
