--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -79,6 +79,7 @@ body {
 
 /* Outlined Buttons */
 .button-outlined {
+  font-size: 1.5rem;
   display: inline-block;
   padding: 12px 24px;
   background: transparent;
