--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -6,9 +6,9 @@
   opacity: 0;
 }
 
-/* Show animation */
-.show {
-  animation: var(--fadeAnim, fadeIn) 1s ease forwards;
+/* .show triggers animation, uses fadeIn for scroll down, fadeInUp for scroll up */
+*.show {
+  animation: fadeIn 1s ease forwards;
 }
 
 
