--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -3,7 +3,7 @@
 /* Fonts & Base */
 
 /* Universal fade setup */
-* {
+*:not(.penguado-nav) {
   opacity: 0;  /* start hidden */
   transform: translateY(-10px);
   transition: opacity 1s ease, transform 1s ease;
