--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -29,8 +29,6 @@ body {
   color: #333333;
   line-height: 1.6;
   text-align: center;
-
-  padding-top: 70px; /*To account for the nav bar hieght*/
 }
 
 /* Banner */
@@ -199,7 +197,7 @@ body {
   width: 100%;
   background-color: #1abc9c;
   padding: 0.75em 2em;   /* extra padding top/bottom and left/right */
-  z-index: 9999;         /* stays above all other content */
+  z-index: 9999 !important;     /* stays above all other content */
   box-shadow: 0 2px 5px rgba(0,0,0,0.2);
 }
 
