--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -200,7 +200,8 @@ body {
   left: 0;
   width: 100%;
   background-color: #1abc9c;
-  padding: 0.75em 2em;   /* extra padding top/bottom and left/right */
+  padding: 0.75em 2em; 
+  padding-bottom: 20px !important;/* extra padding top/bottom and left/right */
   z-index: 9999 !important;     /* stays above all other content */
   box-shadow: 0 2px 5px rgba(0,0,0,0.2);
 }
@@ -211,8 +212,6 @@ body {
   align-items: center;
   list-style: none;
   margin: 0;
-  padding: 0px;
-  padding-bottom: 30px !important;
 }
 
 .nav-left a {
