--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -6,7 +6,7 @@
 * {
   opacity: 0;  /* start hidden */
   transform: translateY(-10px);
-  transition: opacity 0.5s ease, transform 2s ease;
+  transition: opacity 0.3s ease, transform: 0.5s ease;
 }
 
 /* Class that JS will add */
