--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -6,7 +6,7 @@
 * {
   opacity: 0;  /* start hidden */
   transform: translateY(-10px);
-  transition: opacity 1s ease, transform: 1s ease;
+  transition: opacity 1s ease, transform 1s ease;
 }
 
 /* Class that JS will add */
