--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -148,9 +148,7 @@ body {
   margin: 40px auto;
   width: 80%;
   border-radius: 1px;
-  opacity: 0;
-  transform: translateY(20px);
-  transition: all 0.8s ease;
+  opacity: 1 !important;
 }
 
 .footer {
